--- a/README
+++ b/README
@@ -13,30 +13,15 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Ilium MUD.  If not, see <http://www.gnu.org/licenses/>.
 
-IliumROO has been running on ruby-head (1.9.3x).  Using RVM you can
-install ruby-head with a gemset for IliumROO composed of the gems
-below.
+IliumROO runs on the current 1.9.2 p290 version of Ruby.
 
-Some of these gems will be installed as part of the installation of
-other gems.  Start installing from the top and work your way down.
-Gems required:
-cassandra (0.8.2)
-eventmachine (0.12.10)
-json (1.4.6)
-log4r (1.1.9)
-mocha (0.9.10)
-rake (0.8.7)
-rspec (2.2.0)
-simple_uuid (0.1.1)
-archive-tar-minitar (0.5.2)
-columnize (0.3.2)
-diff-lcs (1.1.2)
-rspec-core (2.2.1)
-rspec-expectations (2.2.0)
-rspec-mocks (2.2.0)
-ruby_core_source (0.1.4)
-thrift (0.2.0.4)
-thrift_client (0.5.0)
+IliumROO includes a Gemfile that defines all of the gems IliumROO
+depends on.
+
+It is recomended that you install RVM and create a
+gemset specifically for IliumROO.  Once your gemset is created
+and you have activated it using the rvm use command, then run
+"bundle install" to install dependencies.
 
 Cassandra can be run at the command line using the gem itself, or
 freshly built from the source.  I'd recommend building from the 
@@ -55,3 +40,10 @@ the <Keyspaces> tag and restart Cassandra:
 	<ReplicationFactor>1</ReplicationFactor>
 	<EndPointSnitch>org.apache.cassandra.locator.EndPointSnitch</EndPointSnitch>
 </Keyspace>
+
+If you are using Cassandra 0.7 or later, you can create the IliumROO
+keyspace manually using the cassandra-cli command.  First, make sure
+Cassandra is running, then from the IliumROO directory, issue
+the following command:
+
+$CASSANDRA_HOME/bin/cassandra-cli -host YOUR_HOST -file schema.txt
